# runebender-comfy

./: .comfyignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  __init__.py  pyproject.toml  rebuild-icons.sh  requirements.txt
.agents/: CODE_QUALITY_CLEANUP.md  COMFYFONT_PORT_AUDIT.md  COMFY_REGISTRY_PUBLISHING.md  EDITOR_EXTRACTION_PLAN.md  GLYPHS_SOURCE_SUPPORT_TODO.md  PERFORMANCE_PLAN.md  REPO_MAP.md  SOURCE_WORKFLOW_PLAN.md  TRACE_APP_REVIEW_CHECKPOINT.md  UI_PARITY_PLAN.md
.agents/active/: _template.md  canvas-theme-pass.md  glyph-tracing-providers.md  linked-source-saveback.md
.github/workflows/: ci.yml
assets/: runebender-icons.codepoints.json
assets/runebender-icons.ufo/: fontinfo.plist  lib.plist
assets/runebender-icons.ufo/glyphs/: close.glif  contents.plist  duplicate-repeat.glif  duplicate.glif  exclude.glif  flip-h.glif  flip-v.glif  glyph-grid.glif  hyperpen.glif  intersect.glif  knife.glif  measure.glif  pen.glif  preview.glif  rot-ccw.glif  rot-cw.glif  save-as.glif  save.glif  select.glif  shape-ellipse.glif  shape-rectangle.glif  shapes.glif  subtract.glif  text-ltr.glif  text-rtl.glif  text.glif  union.glif
docs/architecture/: decisions.md
docs/workflows/: local-ai-glyph-tracing.md  local-font-workflow.md
example_workflows/: local-model-mask-to-trace-template.md  quiver-image-to-svg-manual-template.md  runebender-linked-source-smoke.json
nodes/: apply_glyph_candidates.py  compile_font.py  designbot.py  font.py  font_preview.py  font_specimen.py  fork_font.py  glyph_candidate_builder.py  glyph_trace.py  mark_colors.py  runebender.py  workspace.py
nodes/drawbot_presets/: 01_specimen.py  02_waterfall.py  03_glyph.py  04_pangram.py  05_custom.py  README.md  helpers.py
rust-core/: Cargo.toml  README.md
rust-core/src/: editor.rs  image_trace.rs  lib.rs  renderer.rs  text.rs  tool.rs  wasm_api.rs
rust-core/src/editing/: edit_types.rs  mod.rs  mouse.rs  selection.rs  undo.rs
rust-core/src/model/: entity_id.rs  glyph_renderer.rs  kerning.rs  mod.rs
rust-core/src/path/: cubic.rs  hyper.rs  mod.rs  point.rs  point_list.rs  quadratic.rs
samples/demo-font/: Demo.designspace
samples/demo-font/Demo.ufo/: fontinfo.plist  metainfo.plist
samples/demo-font/Demo.ufo/glyphs/: A_.glif  contents.plist
samples/virtua-grotesk/VirtuaGrotesk-Bold.ufo/glyphs/: exclam.glif  seen-ar.glif
scripts/: agent-doctor.sh  assign_icon_codepoints.py  audit.sh  bootstrap_icons_ufo.py  build_toolbar_icons.py  check_comfy_publish_ready.py  check_tracing_live_ready.py  comfyui-run-mac.reference.sh  seed_extra_toolbar_icons.py  sync-comfy-theme.py
tests/: test_web_bundle.py  test_workspace.py
themes/: runebender-dark.json
tools/check-crate-age/: Cargo.toml
tools/check-crate-age/src/: main.rs
web/: .npmrc  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vite.standalone.config.ts
web/src/: Runebender.vue  devTestFont.ts  extension.ts  glyphSidebarData.ts  main.ts  themeTokens.ts
web/src/components/: CategorySidebar.vue  CoordinatePanel.vue  EditModeToolbar.vue  GeneratedIcon.vue  GlyphAnatomyPanel.vue  GlyphCell.vue  GlyphInfoSidebar.vue  HelperPanel.vue  MarkColorPanel.vue  MasterToolbar.vue  ShapesToolbar.vue  SystemToolbar.vue  TextDirectionToolbar.vue  TopBar.vue  TransformPanel.vue  WelcomePanel.vue  WorkspaceToolbar.vue  generatedToolbarIcons.ts  markColors.ts  toolIds.ts
web/src/host/: runebenderHost.ts
web/src/hosts/browser/: browserHost.ts
web/src/hosts/comfy/: comfyHost.ts
