[package]
name = "runebender-comfy-core"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "WASM core for runebender-comfy-nodes — Vello + Kurbo glyph editor"
repository = "https://github.com/eliheuer/runebender-comfy-nodes"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Vello renders, Kurbo handles geometry. No Xilem — UI lives in Vue.
vello = "0.3"
kurbo = "0.11"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "GpuCanvasContext",
]

[profile.release]
opt-level = "z"
lto = true
