[package]
name = "runebender-comfy-core"
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
license = "GPL-3.0-or-later"
description = "WASM core for runebender-comfy — glyph editor ported from runebender-xilem"
repository = "https://github.com/eliheuer/runebender-comfy"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared kurbo-free types with runebender-xilem.
runebender-core = { path = "../../runebender-core" }

# Geometry (Linebender). Matches runebender-xilem's kurbo version so
# types graft without translation.
kurbo = "0.13"
# spline solves on kurbo 0.9; we keep both versions side by side and
# convert points at the boundary, exactly as runebender-xilem does.
kurbo_09 = { package = "kurbo", version = "0.9.5" }
spline = { git = "https://github.com/linebender/spline" }

# Serialization (used by glyph data types).
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error types.
thiserror = "1.0"

# UFO parsing (Linebender) — same library runebender-xilem uses.
norad = "0.13"

# WASM bindings.
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Render path (Wave 3). Vello re-exports wgpu and peniko, so we use
# those rather than picking versions ourselves.
vello = "0.8"
peniko = "0.5"

# Enable WebGPU canvas surface support for wasm32 targets. Vello pulls
# in wgpu but with default-features off and no `webgpu`, so the
# `HtmlCanvasElement → SurfaceTarget` impl isn't available unless we
# add it ourselves. Native targets don't need this.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "28", default-features = false, features = ["webgpu", "wgsl"] }
# uuid (pulled in transitively by norad) needs its `js` feature on
# wasm32 to source randomness from js-sys.
uuid = { version = "1", features = ["js"] }

# Async runtime for WebGPU init (only used in WASM builds, but keeping
# it unconditional lets `cargo test` build cleanly without target
# gating noise).
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console",
]

[profile.release]
opt-level = "z"
lto = true
